--- a/19json-bread/views/index.ejs
+++ b/19json-bread/views/index.ejs
@@ -10,6 +10,7 @@
         a.disabled {
             pointer-events: none;
             cursor: default;
+            background-color: rgba(165, 165, 165, 0.426);
         }
 
         input[type=text],
@@ -105,10 +106,10 @@
 
         .blue-button {
             font-family: Arial, Helvetica, sans-serif;
-            width: 6%;
+            width: 70px;
             background-color: rgb(7, 101, 201);
             color: white;
-            padding: 7px 10px;
+            padding: 7px 9px;
             margin: 8px 0;
             border: none;
             border-radius: 4px;
