--- a/19json-bread/views/add.ejs
+++ b/19json-bread/views/add.ejs
@@ -31,7 +31,7 @@
 
         .purple-button {
             font-family: Arial, Helvetica, sans-serif;
-            width: 5%;
+            width: 60px;
             background-color: rgb(57, 3, 208);
             color: white;
             padding: 7px 10px;
