--- a/20sqlite3-bread/views/add.ejs
+++ b/20sqlite3-bread/views/add.ejs
@@ -43,6 +43,20 @@
             text-decoration: none;
         }
 
+        .red-button {
+            font-family: Arial, Helvetica, sans-serif;
+            width: 60px;
+            background-color: red;
+            color: white;
+            padding: 7px 10px;
+            margin: 8px 0;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+            font-size: 100%;
+            text-decoration: none;
+        }
+
         form {
             font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 
@@ -57,39 +71,36 @@
 </head>
 
 <body>
-    <h1>Edit Data</h1>
-    <form action="" method="post">
-        <div class="containercheck">
-            <label for="IDedit" style="width: 150px;">ID</label>
-            <input type="number" id="IDedit" name="IDedit" value="<%= id+1 %>" disabled><br>
-        </div>
+    <h1>Add Data</h1>
+    <form action="/add" method="post">
         <div class="containercheck">
             <label for="addstring" style="width: 150px;">String</label>
-            <input type="text" id="addstring" name="string" placeholder="String" value="<%= edit.string %>"><br>
+            <input type="text" id="addstring" name="stringdb" placeholder="String"><br>
         </div>
         <div class="containercheck">
             <label for="addinteger" style="width: 150px;">Integer</label>
-            <input type="number" id="addinteger" name="integer" placeholder="Integer" value="<%= edit.integer %>"><br>
+            <input type="number" id="addinteger" name="integerdb" placeholder="Integer"><br>
         </div>
         <div class="containercheck">
             <label for="addfloat" style="width: 150px;">Float</label>
-            <input type="number" id="addfloat" name="float" placeholder="Float" step="any"
-                value="<%= edit.float %>"><br>
+            <input type="number" id="addfloat" name="floatdb" placeholder="Float" step="any"><br>
         </div>
         <div class="containercheck">
             <label for="adddate" style="width: 150px;">Date</label>
-            <input type="date" id="adddate" name="date" value="<%= edit.date %>"><br>
+            <input placeholder="Date" type="text" onfocus="(this.type='date')" id="adddate" name="datedb">
         </div>
         <div class="containercheck">
             <label for="addboolean" style="width: 150px;">Boolean</label>
-            <select id="addboolean" name="boolean" placeholder="Choose the boolean...">
-                <option value="true" <%=edit.boolean=='true' ? "selected" :"" %> >true</option>
-                <option value="false" <%=edit.boolean=='false' ? "selected" :"" %>>false</option>
+            <select id="addboolean" name="booleandb">
+                <option value="" disabled selected>Choose the boolean ...</option>
+                <option value="true">true</option>
+                <option value="false">false</option>
             </select>
+            <br>
         </div>
-        <br>
         <button type="submit" class="purple-button">Save</button>
-    </form>
+        <a href="/" class="red-button">Cancel</a>
+
 </body>
 
 </html>
