--- a/20sqlite3-bread/views/edit.ejs
+++ b/20sqlite3-bread/views/edit.ejs
@@ -31,7 +31,7 @@
 
         .purple-button {
             font-family: Arial, Helvetica, sans-serif;
-            width: 60px;
+            width: 70px;
             background-color: rgb(57, 3, 208);
             color: white;
             padding: 7px 10px;
@@ -42,6 +42,21 @@
             font-size: 100%;
             text-decoration: none;
         }
+
+        .red-button {
+            font-family: Arial, Helvetica, sans-serif;
+            width: 60px;
+            background-color: red;
+            color: white;
+            padding: 7px 10px;
+            margin: 8px 0;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+            font-size: 100%;
+            text-decoration: none;
+        }
+
 
         form {
             font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
@@ -65,30 +80,32 @@
         </div>
         <div class="containercheck">
             <label for="addstring" style="width: 150px;">String</label>
-            <input type="text" id="addstring" name="string" placeholder="String" value="<%= edit.string %>"><br>
+            <input type="text" id="addstring" name="stringdb" placeholder="String" value="<%= edit.stringdb %>"><br>
         </div>
         <div class="containercheck">
             <label for="addinteger" style="width: 150px;">Integer</label>
-            <input type="number" id="addinteger" name="integer" placeholder="Integer" value="<%= edit.integer %>"><br>
+            <input type="number" id="addinteger" name="integerdb" placeholder="Integer"
+                value="<%= edit.integerdb %>"><br>
         </div>
         <div class="containercheck">
             <label for="addfloat" style="width: 150px;">Float</label>
-            <input type="number" id="addfloat" name="float" placeholder="Float" step="any"
-                value="<%= edit.float %>"><br>
+            <input type="number" id="addfloat" name="floatdb" placeholder="Float" step="any"
+                value="<%= edit.floatdb %>"><br>
         </div>
         <div class="containercheck">
             <label for="adddate" style="width: 150px;">Date</label>
-            <input type="date" id="adddate" name="date" value="<%= edit.date %>"><br>
+            <input type="date" id="adddate" name="datedb" value="<%= edit.datedb %>"><br>
         </div>
         <div class="containercheck">
             <label for="addboolean" style="width: 150px;">Boolean</label>
-            <select id="addboolean" name="boolean" placeholder="Choose the boolean...">
-                <option value="true" <%=edit.boolean=='true' ? "selected" :"" %> >true</option>
-                <option value="false" <%=edit.boolean=='false' ? "selected" :"" %>>false</option>
+            <select id="addboolean" name="booleandb" placeholder="Choose the boolean...">
+                <option value="true" <%=edit.booleandb=='true' ? "selected" :"" %> >true</option>
+                <option value="false" <%=edit.booleandb=='false' ? "selected" :"" %>>false</option>
             </select>
         </div>
         <br>
-        <button type="submit" class="purple-button">Save</button>
+        <button type="submit" class="purple-button">Update</button>
+        <a href="/" class="red-button">Cancel</a>
     </form>
 </body>
 
