--- a/21postgre/views/edit.ejs
+++ b/21postgre/views/edit.ejs
@@ -6,69 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Add Data</title>
-    <style>
-        h1 {
-            font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-        }
-
-        input[type=text],
-        input[type=number],
-        input[type=date],
-        select {
-            -moz-appearance: textfield;
-            width: 90%;
-            padding: 13px 20px;
-            margin: 8px 0;
-            display: inline-block;
-            border: 1px solid #ccc;
-            border-radius: 4px;
-            box-sizing: border-box;
-        }
-
-        body {
-            padding: 30px 50px;
-        }
-
-        .purple-button {
-            font-family: Arial, Helvetica, sans-serif;
-            width: 70px;
-            background-color: rgb(57, 3, 208);
-            color: white;
-            padding: 7px 10px;
-            margin: 8px 0;
-            border: none;
-            border-radius: 4px;
-            cursor: pointer;
-            font-size: 100%;
-            text-decoration: none;
-        }
-
-        .red-button {
-            font-family: Arial, Helvetica, sans-serif;
-            width: 60px;
-            background-color: red;
-            color: white;
-            padding: 7px 10px;
-            margin: 8px 0;
-            border: none;
-            border-radius: 4px;
-            cursor: pointer;
-            font-size: 100%;
-            text-decoration: none;
-        }
-
-
-        form {
-            font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-
-        }
-
-        form .containercheck {
-            display: flex;
-            margin: 2px;
-            align-items: center;
-        }
-    </style>
+    <link rel='stylesheet' href='/stylesheets/style2.css' />
 </head>
 
 <body>
