--- a/24pms/views/users/form.ejs
+++ b/24pms/views/users/form.ejs
@@ -1,6 +1,7 @@
 <% include ../partial/header.ejs %>
     <div style="padding-top: 80px;padding-left: 40px;padding-right: 40px;">
-        <h1>Add Users</h1><br>
+        <h1>Add Users</h1>
+        <br>
         <form action="/users/add" method="post">
             <div class="row mb-3">
                 <label for="inputEmail3" class="col-sm-2 col-form-label">Email</label>
@@ -54,7 +55,7 @@
                 <legend class="col-form-label col-sm-2 pt-0">Type</legend>
                 <div class="col-sm-10">
                     <div class="form-check">
-                        <input class="form-check-input" type="checkbox" id="gridCheck1" name="type">
+                        <input class="form-check-input" type="checkbox" id="gridCheck1" name="fulltime">
                         <label class="form-check-label" for="gridCheck1">
                             Fulltime
                         </label>
@@ -80,7 +81,6 @@
                 </div>
             </fieldset>
             <button type="submit" class="btn btn-primary"><i class="fas fa-save"></i> Submit</button>
-            <a class="btn btn-danger"><i class="fas fa-times"></i> Cancel</a>
         </form><br>
     </div>
 <% include ../partial/footer.ejs %>
