--- a/24pms/public/stylesheets/style.css
+++ b/24pms/public/stylesheets/style.css
@@ -1,8 +1,76 @@
-body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
 }
 
-a {
-  color: #00B7FF;
+input[type=text],
+input[type=number],
+input[type=date],
+select {
+  -moz-appearance: textfield;
+  width: 90%;
+  padding: 7px 10px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+
+#dateFilter,
+#dateFilter2 {
+  max-width: 200px;
+
+}
+
+.containerDate {
+  display: flex;
+}
+
+table {
+  font-size: large;
+}
+
+thead{
+  font-weight: bold
+}
+
+form .containerCheck {
+  display: flex;
+  margin: 2px;
+  align-items: center;
+}
+
+.pagination {
+  display: inline-block;
+}
+
+.pagination a {
+  color: black;
+  float: left;
+  padding: 8px 16px;
+  text-decoration: none;
+  border: 1px solid #ddd;
+  color: rgb(7, 101, 201)
+}
+
+.pagination a:hover:not(.active) {
+  background-color: #ddd;
+}
+
+.pagination a:first-child {
+  border-top-left-radius: 5px;
+  border-bottom-left-radius: 5px;
+}
+
+.pagination a:last-child {
+  border-top-right-radius: 5px;
+  border-bottom-right-radius: 5px;
+}
+
+a.disabled {
+  pointer-events: none;
+  cursor: default;
+  background-color: rgba(165, 165, 165, 0.426);
 }
