--- a/24pms/views/partial/header.ejs
+++ b/24pms/views/partial/header.ejs
@@ -8,6 +8,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
+    <link rel='stylesheet' href='/stylesheets/style.css' />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
         integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 </head>
@@ -23,17 +24,18 @@
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <ul class="navbar-nav me-auto mb-2 mb-md-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="/projects"><i class="fas fa-tasks"></i> Projects</a>
+                        <a class="nav-link active" aria-current="page" href="/projects"><i class="fas fa-tasks"></i>
+                            Projects</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/profile"><i class="fas fa-id-card"></i>  Profile</a>
+                        <a class="nav-link" href="/profile"><i class="fas fa-id-card"></i> Profile</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/users"><i class="fas fa-users"></i> Users</a>
                     </li>
                 </ul>
                 <form class="d-flex">
-                    <button class="btn btn-outline-success"><i class="fas fa-sign-out-alt"></i> Logout</button>
+                    <a class="btn btn-outline-success" href="/logout"><i class="fas fa-sign-out-alt"></i> Logout</a>
                 </form>
             </div>
         </div>
