--- a/24pms/views/partial/footer.ejs
+++ b/24pms/views/partial/footer.ejs
@@ -1,2 +1,16 @@
 </body>
+<script>
+    let btnPage = document.querySelectorAll(".btn-page")
+    btnPage.forEach(element => {
+        if (window.location.href.includes("page=")) {
+            if (element.textContent.trim() == window.location.href.split("page=").pop()) {
+                element.style.background = "rgb(7, 101, 201)";
+                element.style.color = "white"
+            }
+        } else {
+            btnPage[0].style.background = "rgb(7, 101, 201)";
+            btnPage[0].style.color = "white"
+        }
+    })
+</script>
 </html>
