--- a/24pms/views/projects/formEdit.ejs
+++ b/24pms/views/projects/formEdit.ejs
@@ -1,14 +1,15 @@
 <% include ../partial/header.ejs %>
     <div style="padding-top: 80px;padding-left: 40px;padding-right: 40px;">
-        <h1>Add Project</h1>
+        <h1>Edit Project</h1>
         <hr>
         <br>
         <div style="padding-left: 100px;padding-right: 100px;">
-            <form action="/projects/add" method="post">
+            <form action="" method="POST">
                 <div class="row mb-3">
                     <label for="projectName" class="col-sm-2 col-form-label">Name</label>
                     <div class="col-sm-10">
-                        <input type="text" class="form-control" id="projectName" name="projectName">
+                        <input type="text" class="form-control" id="projectName" name="projectName"
+                            value="<%= projectName ? projectName : "" %>">
                     </div>
                 </div>
                 <fieldset class="row mb-3">
@@ -18,7 +19,8 @@
                             <div class="form-check">
                                 <label class="form-check-label">
                                     <input class="form-check-input" type="checkbox" name="projectMembers"
-                                        id="projectMembers" value="<%= item.firstname %>">
+                                        id="projectMembers" value="<%= item.firstname %>"
+                                        <%=projectMembers.indexOf(item.firstname)>=0 ? "checked" :"" %> >
                                     <%= item.firstname %>
                                 </label>
                             </div>
