--- a/24pms/views/partial/footer.ejs
+++ b/24pms/views/partial/footer.ejs
@@ -1,16 +1,20 @@
 </body>
 <script>
+    $('#myModal').on('shown.bs.modal', function () {
+        $('#myInput').trigger('focus')
+    })
     let btnPage = document.querySelectorAll(".btn-page")
     btnPage.forEach(element => {
         if (window.location.href.includes("page=")) {
             if (element.textContent.trim() == window.location.href.split("page=").pop()) {
-                element.style.background = "rgb(7, 101, 201)";
+                element.style.background = "rgb(0, 166, 255)";
                 element.style.color = "white"
             }
         } else {
-            btnPage[0].style.background = "rgb(7, 101, 201)";
+            btnPage[0].style.background = "rgb(6, 137, 208)";
             btnPage[0].style.color = "white"
         }
     })
 </script>
+
 </html>
