--- a/24pms/views/users/form.ejs
+++ b/24pms/views/users/form.ejs
@@ -28,7 +28,7 @@
                     <input type="text" class="form-control" id="inputLastName" name="lastName">
                 </div>
             </div>
-            <fieldset class="row mb-3">
+            <div class="row mb-3">
                 <legend class="col-form-label col-sm-2 pt-0">Position</legend>
                 <div class="col-sm-10">
                     <div class="form-check">
@@ -51,7 +51,7 @@
                         </label>
                     </div>
                 </div>
-            </fieldset>
+            </div>
             <div class="row mb-3">
                 <legend class="col-form-label col-sm-2 pt-0">Type</legend>
                 <div class="col-sm-10">
@@ -63,7 +63,7 @@
                     </div>
                 </div>
             </div>
-            <fieldset class="row mb-3">
+            <div class="row mb-3">
                 <legend class="col-form-label col-sm-2 pt-0">Role</legend>
                 <div class="col-sm-10">
                     <div class="form-check">
@@ -80,7 +80,7 @@
                         </label>
                     </div>
                 </div>
-            </fieldset>
+            </div>
             <button type="submit" class="btn btn-primary"><i class="fas fa-save"></i> Submit</button>
         </form><br>
     </div>
