--- a/24pms/views/profile/form.ejs
+++ b/24pms/views/profile/form.ejs
@@ -17,7 +17,7 @@
                         <input type="password" class="form-control" id="inputPassword3" name="password">
                     </div>
                 </div>
-                <fieldset class="row mb-3">
+                <div class="row mb-3">
                     <legend class="col-form-label col-sm-2 pt-0">Position</legend>
                     <div class="col-sm-10">
                         <div class="form-check">
@@ -42,7 +42,7 @@
                             </label>
                         </div>
                     </div>
-                </fieldset>
+                </div>
                 <div class="row mb-3">
                     <legend class="col-form-label col-sm-2 pt-0">Type</legend>
                     <div class="col-sm-10">
