--- a/24pms/views/projects/formEdit.ejs
+++ b/24pms/views/projects/formEdit.ejs
@@ -12,7 +12,7 @@
                             value="<%= projectName ? projectName : "" %>">
                     </div>
                 </div>
-                <fieldset class="row mb-3">
+                <div class="row mb-3">
                     <legend class="col-form-label col-sm-2 pt-0">Members</legend>
                     <div class="col-sm-10">
                         <% members.forEach((item, index)=>{ %>
@@ -26,7 +26,7 @@
                             </div>
                             <% }) %>
                     </div>
-                </fieldset>
+                </div>
                 <button type="submit" class="btn btn-primary"><i class="fas fa-save"></i> Save</button>
                 <a class="btn btn-danger" href="/projects"><i class="fas fa-times"></i> Cancel</a>
             </form><br>
