--- a/24pms/views/projects/form.ejs
+++ b/24pms/views/projects/form.ejs
@@ -8,7 +8,7 @@
                 <div class="row mb-3">
                     <label for="projectName" class="col-sm-2 col-form-label">Name</label>
                     <div class="col-sm-10">
-                        <input type="text" class="form-control" id="projectName" name="projectName">
+                        <input type="text" class="form-control" id="projectName" name="projectName" required>
                     </div>
                 </div>
                 <div class="row mb-3">
